tests/ui/ferrocene/compiler-arguments/upper_f/upper-f_space-valid-option.stderr
error: missing documentation for the crate
  --> $DIR/upper-f_space-valid-option.rs:6:1
   |
LL | fn main() {}
   | ^^^^^^^^^^^^
   |
   = note: requested on the command line with `-F missing-docs`

error: aborting due to previous error

